--- a/sitedata/committee.yml
+++ b/sitedata/committee.yml
@@ -1,11 +1,14 @@
 committee:
-  - role: Developer
-    name: Alexander Rush
-    aff: Cornell Tech, Hugging Face
-    im: https://avatars0.githubusercontent.com/u/35882?s=400&u=8f382f638b31f13a4754656140256241121c5916&v=4
-    tw: srush_nlp
-  - role: Developer
-    name: Hendrik Strobelt
-    aff: MIT-IBM Watson AI Lab
-    tw: hen_str
-    im: https://avatars1.githubusercontent.com/u/950990?s=460&u=fba00c4d7c79fd9e4b83a15394dd1bbe7b7d3df5&v=4
+  - role: Senior researcher
+    name: Odalric-Ambrym Maillard
+    aff: Inria Lille (Scool)
+    # im: https://avatars0.githubusercontent.com/u/35882?s=400&u=8f382f638b31f13a4754656140256241121c5916&v=4
+    # tw: srush_nlp
+  - role: Research Engineer
+    name: Brahim Driss
+    aff: Inria Lille (Scool)
+    # tw: hen_str
+    # im: https://avatars1.githubusercontent.com/u/950990?s=460&u=fba00c4d7c79fd9e4b83a15394dd1bbe7b7d3df5&v=4
+  - role: Inria Starting Faculty Position
+    name: Debabrota Basu
+    aff: Inria Lille (Scool)
