--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,15 +26,11 @@ jobs:
     - name: build docs
       run: |
         python main.py sitedata/ --build
-    - name: Install SSH Client
-      uses: webfactory/ssh-agent@v0.4.1
-      with:
-          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
-    - name: Deploy
-      uses: "JamesIves/github-pages-deploy-action@3.7.1"
-      with:
-          REPOSITORY_NAME: mini-conf/mini-conf.github.io
-          BRANCH: master  # The branch the action should deploy to.
-          SSH: true
-          FOLDER: build/ # The folder the action should deploy.
-          CLEAN: true
+    # - name: Deploy
+    #   uses: "JamesIves/github-pages-deploy-action@3.7.1"
+    #   with:
+    #       REPOSITORY_NAME: mini-conf/mini-conf.github.io
+    #       BRANCH: master  # The branch the action should deploy to.
+    #       SSH: true
+    #       FOLDER: build/ # The folder the action should deploy.
+    #       CLEAN: true
