--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,11 +26,10 @@ jobs:
     - name: build docs
       run: |
         python main.py sitedata/ --build
-    # - name: Deploy
-    #   uses: "JamesIves/github-pages-deploy-action@3.7.1"
-    #   with:
-    #       REPOSITORY_NAME: mini-conf/mini-conf.github.io
-    #       BRANCH: master  # The branch the action should deploy to.
-    #       SSH: true
-    #       FOLDER: build/ # The folder the action should deploy.
-    #       CLEAN: true
+    - name: Deploy to GitHub Pages
+      uses: JamesIves/github-pages-deploy-action@v4.5.0
+      with:
+          REPOSITORY_NAME: mini-conf/mini-conf.github.io
+          BRANCH: master  # The branch the action should deploy to.
+          FOLDER: build/ # The folder the action should deploy.
+          CLEAN: true
