--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4.5.0
       with:
-          REPOSITORY_NAME: mini-conf/mini-conf.github.io
+          REPOSITORY_NAME: farm-gym/AgroRlChallenge.github.io
           BRANCH: master  # The branch the action should deploy to.
           FOLDER: build/ # The folder the action should deploy.
           CLEAN: true
